fix HoareAnnotationChecker traversal and checking